# GridRL

./: LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
gridrl/: __init__.py  __version__.py  agents_base.py  agents_random.py  cli.py  configs_speedup_dependencies.py  core_constants.py  core_environment.py  core_game.py  functions_benchmarking.py  functions_data.py  functions_dataframe.py  functions_images.py  functions_port_dependencies.py  game_module_selector.py  games_list.py  graph.py  menu_base.py  wrapper_gui.py  wrapper_multi_action.py  wrapper_stream_agent.py
gridrl/abstract_games/: __init__.py  dummy_abstract_game.py  exploration_abstract_game.py
gridrl/agents/: __init__.py
gridrl/envs/: __init__.py
gridrl/examples/: example_agent.py  example_environment.py  example_run_deterministic_agent.py  train_model_sb3_jax.py  train_model_sb3_torch.py
gridrl/games/: __init__.py
gridrl/games/creatures_world1/: __init__.py  constants.py  env.py  game.py  menu.py  scripting.py
gridrl/games/creatures_world1/data/: events.json  map_metadata.json  npcs.json  powerups.json  scripts.json  teleport_data.json  wild_encounters.json
gridrl/games/exploration_world1/: __init__.py  constants.py  env.py  game.py  menu.py  scripting.py
gridrl/games/exploration_world1/data/: events.json  npcs.json  powerups.json  scripts.json  teleport_data.json
